@@ -36,8 +36,7 @@
 #include "ace/OS_NS_sys_time.h"
 #include "ace/OS_NS_time.h"
 #include "ace/Time_Value.h"
-
-ACE_RCSID(tests, Log_Msg_Test, "$Id$")
+#include "ace/Thread.h"
 
 static void
 cleanup (void)
@@ -549,7 +548,7 @@ Log_Spec_Verify::log (ACE_Log_Record &log_record)
         }
         else if (ACE_OS::strncmp (b, ACE_TEXT ("l5:"), 3) == 0)
         {
-          b += 3;          
+          b += 3;
           switch (log_record.type())
           {
             case (LM_SHUTDOWN): expect = ACE_TEXT("S"); break;
@@ -565,7 +564,7 @@ Log_Spec_Verify::log (ACE_Log_Record &log_record)
             case (LM_EMERGENCY): expect = ACE_TEXT("!"); break;
             default: expect = ACE_TEXT("?"); break;
           }
-          
+
         }
       else
         {
@@ -637,6 +636,10 @@ test_format_specs (void)
   ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("%T\n")));
   ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("%#T\n"), &tv));
 
+  ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("thread id as argument %#t\n"), ACE_Thread::self ()));
+  ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("thread id %t\n")));
+  ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("thread id as argument %#t\n"), 100));
+
   Log_Spec_Verify  verifier;
 
   ACE_LOG_MSG->msg_callback (&verifier);
@@ -648,21 +651,21 @@ test_format_specs (void)
   ACE_LOG_MSG->log (LM_DEBUG, ACE_TEXT ("l1:%l"));
   ACE_LOG_MSG->log (LM_DEBUG, ACE_TEXT ("l2:%5l"));
   ACE_LOG_MSG->log (LM_DEBUG, ACE_TEXT ("l3N1:%0*l,%.7N"), 4);
-  ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("l4:%T")));  
+  ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("l4:%T")));
 
-  ACE_LOG_MSG->priority_mask (LM_SHUTDOWN | 
-                              LM_TRACE | 
-                              LM_DEBUG | 
-                              LM_INFO | 
-                              LM_NOTICE | 
-                              LM_WARNING | 
-                              LM_STARTUP | 
-                              LM_ERROR | 
-                              LM_CRITICAL | 
-                              LM_ALERT | 
+  ACE_LOG_MSG->priority_mask (LM_SHUTDOWN |
+                              LM_TRACE |
+                              LM_DEBUG |
+                              LM_INFO |
+                              LM_NOTICE |
+                              LM_WARNING |
+                              LM_STARTUP |
+                              LM_ERROR |
+                              LM_CRITICAL |
+                              LM_ALERT |
                               LM_EMERGENCY,
                               ACE_Log_Msg::PROCESS);
-  ACE_DEBUG ((LM_SHUTDOWN, ACE_TEXT ("l5:%.1M")));  
+  ACE_DEBUG ((LM_SHUTDOWN, ACE_TEXT ("l5:%.1M")));
   ACE_DEBUG ((LM_TRACE, ACE_TEXT ("l5:%.1M")));
   ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("l5:%.1M")));
   ACE_DEBUG ((LM_INFO, ACE_TEXT ("l5:%.1M")));
@@ -673,7 +676,7 @@ test_format_specs (void)
   ACE_DEBUG ((LM_CRITICAL, ACE_TEXT ("l5:%.1M")));
   ACE_DEBUG ((LM_ALERT, ACE_TEXT ("l5:%.1M")));
   ACE_DEBUG ((LM_EMERGENCY, ACE_TEXT ("l5:%.1M")));
-  
+
   ACE_LOG_MSG->msg_ostream (ace_file_stream::instance ()->output_file ());
   ACE_LOG_MSG->msg_callback (0);
   ACE_LOG_MSG->set_flags (ACE_Log_Msg::OSTREAM);
