@@ -1,3 +1,11 @@
+Tue Aug 24 11:29:45 UTC 2010 Marijke Hengstmengel <mhengstmengel@remedy.nl>
+
+        * ace/Log_Msg.h:
+        * ace/Log_Msg.cpp:
+        * tests/Log_Msg_Test.cpp:
+        * ChangeLog:
+        Add %#t to log a thread id that is coming from user code, as argument .
+
 Mon Aug 23 19:51:59 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * tests/Missing_Svc_Conf_Test.cpp:
